# OpenCV_FFMPEG

./: .gitignore  CMakeLists.txt  FFMPEG_BUILD.md  OpenCV_with_CUDA_build.md  README.md
src/: common.h  rtspstreamer.cpp  rtspstreamer.h
tools/: main.cpp
